--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "datatables.net": "^1.11.3",
+        "datatables.net-dt": "^1.11.3",
         "sweetalert2": "^11.1.7"
     }
 }
